--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@mui/material": "^6.4.4",
     "@tanstack/react-router": "^1.102.1",
     "@tanstack/router-devtools": "^1.102.1",
+    "motion": "^12.4.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   }
 }
