--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^6.4.4",
     "@tanstack/react-router": "^1.102.1",
     "@tanstack/router-devtools": "^1.102.1",
+    "axios": "^1.7.9",
     "motion": "^12.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
