--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "types": ["vite/client"]
+  },
+  "include": [
+    "src",
+    "env.d.ts"
+  ]
 }
