feature: integrate sing in endpoint to the page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,5 @@
     "skipLibCheck": true,
     "types": ["vite/client"]
   },
-  "include": [
-    "src",
-    "env.d.ts"
-  ]
+  "include": ["src", "env.d.ts"]
 }
