--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-router": "^1.102.1",
     "@tanstack/router-devtools": "^1.102.1",
     "axios": "^1.7.9",
