--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.102.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.2",
@@ -26,6 +27,7 @@
     "@tanstack/react-router": "^1.102.1",
     "@tanstack/router-devtools": "^1.102.1",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "motion": "^12.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
