--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/router-devtools": "^1.102.1",
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "motion": "^12.4.2",
     "react": "^19.0.0",
