--- a/package.json
+++ b/package.json
@@ -8,15 +8,26 @@
     "dev": "vite --port=3001",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
     "@tanstack/router-plugin": "^1.102.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.2",
-    "vite": "^6.0.3"
+    "jest": "^29.7.0",
+    "jsdom": "^26.0.0",
+    "ts-jest": "^29.2.6",
+    "vite": "^6.0.3",
+    "vitest": "^3.0.8"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
