--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -1,44 +1,43 @@
 name: Build and Push Docker image
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
 
-    - name: Install dependencies
-      run: |
-        npm install
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Run user tests
-      run: |
-        npm run test
+      - name: Run user tests
+        run: npm test
 
+  build:
+    needs: test  
+    runs-on: ubuntu-latest
 
-    build:
-        runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        steps:
-        - name: Checkout repository
-          uses: actions/checkout@v2
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-        - name: Log in to Docker Hub
-          run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Build Docker image
+        run: docker build -t dogogh1/frontend-blogpost:latest .
 
-        - name: Build Docker image
-          run: docker build -t dogogh1/frontend-blogpost:latest .
-
-        - name: Push Docker image
-          run: docker push dogogh1/frontend-blogpost:latest
+      - name: Push Docker image
+        run: docker push dogogh1/frontend-blogpost:latest
