--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -55,22 +55,22 @@ jobs:
     steps:
     - name: Install sshpass
       run: sudo apt-get update && sudo apt-get install -y sshpass
-
+  
     - name: SSH into VPN Server using password
       run: |
         sshpass -p 'vmvpn' ssh -o StrictHostKeyChecking=no vmvpn@34.123.48.112 "
-
+          # Comandos para o primeiro SSH no servidor VPN
           sshpass -p 'admin' ssh -o StrictHostKeyChecking=no frontend@10.0.0.7 '
-     
+            # Navegar até o diretório onde o docker-compose.yml está localizado
             cd /home/frontend
             
-            
+            # Parar e remover os containers com Docker Compose
             docker compose down
             
-            
+            # Remover as imagens Docker, se necessário
             docker system prune -af
             
-
+            # Subir novamente os containers com Docker Compose
             docker compose up -d
           '
         "
