--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -62,9 +62,9 @@ jobs:
       run: |
         sshpass -p 'vmvpn' ssh -o StrictHostKeyChecking=no vmvpn@34.123.48.112 "
           # Comandos para o primeiro SSH no servidor VPN
-          sshpass -p 'admin' ssh -o StrictHostKeyChecking=no backend@10.0.1.4 '
+          sshpass -p 'admin' ssh -o StrictHostKeyChecking=no frontend@10.0.0.7 '
             # Navegar até o diretório onde o docker-compose.yml está localizado
-            cd /home/backend
+            cd /home/frontend
             
             # Parar e remover os containers com Docker Compose
             docker compose down
