--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://10.0.0.4:80/api/
+VITE_API_URL=http://10.0.0.4:80
 VITE_ENCRYPTION_KEY="ti1lg4tHb/LhnkFeMfZxg2vdrcKGuTZeG6WnClnXLk0="
