--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -67,11 +67,9 @@ jobs:
 
             cd "${{ secrets.VM_PATH }}"
             
-            docker compose down
+            git pull
             
-            docker system prune -af
-            
-            docker compose up -d
+            npm run build
           '
         "
 
