--- a/nginx.conf
+++ b/nginx.conf
@@ -2,15 +2,32 @@ server {
     listen 80;
     server_name _;
 
-    root ./dist/;
+    root /usr/share/nginx/html;
     index index.html;
 
-    # Serve arquivos do React build
+    # Bloquear arquivos e pastas sensíveis
+    location ~* /(\.git|\.env|\.htaccess|docker-compose\.yml|Dockerfile|README\.md|package\.json|package-lock\.json|\.github) {
+        deny all;
+        return 403;
+    }
+
+    # Bloquear diretórios ocultos (ex: .git/)
+    location ~ /\. {
+        deny all;
+        return 403;
+    }
+
+    # Headers de segurança
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
+    add_header X-XSS-Protection "1; mode=block";
+
+    # Serve arquivos do React build (SPA)
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Redireciona chamadas API para o backend (opcional)
+    # Proxy para o backend Flask (API)
     location /api/ {
         proxy_pass http://10.0.1.4:5000/;  # IP da VM backend Flask
         proxy_http_version 1.1;
