--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker image
+name: Build and Push Frontend Docker image
 
 on:
   push:
@@ -30,30 +30,29 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run user tests
+      - name: Run frontend tests
         run: npm test
-  deploy:
-    needs: test  
+
+  build-and-push:
+    needs: test  # Só roda se os testes passarem
     runs-on: ubuntu-latest
 
-    
     steps:
-    - name: Install sshpass
-      run: sudo apt-get update && sudo apt-get install -y sshpass
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: SSH into VPN Server using password
-      run: |
-        sshpass -p '${{ secrets.VM_VPN_PASS }}' ssh -o StrictHostKeyChecking=no "${{ secrets.VM_VPN }}" "
-        #retirar o ssh para a vpn
-       
-          sshpass -p '${{ secrets.VM_FRONT_PASS }}' ssh -o StrictHostKeyChecking=no "${{ secrets.VM_FRONT }}" '
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-            cd "${{ secrets.VM_PATH }}"
-            
-            git pull
-            
-            npm run build
-          '
-        "
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USER }}/frontend:latest
