--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -55,4 +55,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USER }}/frontend-blogpost:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
