--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ server {
 
     # Proxy para o backend Flask (API)
     location /api/ {
-        proxy_pass http://1blog-backend:5000/;  # IP da VM backend Flask
+        proxy_pass http://blog-backend:5000/;  # IP da VM backend Flask
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
