--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -40,12 +40,21 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        
+        # criar arquivo env com o secret .env
+      - name : env create
+        run: echo "${{secrets.ENV}}" > .env
 
+      - name : env conf
+        run: echo "${{secrets.NGINX_CONF}}" > nginx.conf
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
+
+        
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -56,3 +65,6 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
+          
+      - name: del
+        run: rm .env nginx.conf
