--- a/nginx.conf
+++ b/nginx.conf
@@ -28,11 +28,11 @@ server {
     }
 
     # Proxy para o backend Flask (API)
-    location /api/ {
-        proxy_pass http://blog-backend:5000/api/;  # IP da VM backend Flask
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    #location /api/ {
+    #    proxy_pass http://blog-backend:5000/api/;  # IP da VM backend Flask
+    #    proxy_http_version 1.1;
+    #    proxy_set_header Host $host;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #}
 }
