--- a/.github/workflows/pipeline-dev.yml
+++ b/.github/workflows/pipeline-dev.yml
@@ -61,6 +61,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:staging
           
     
