--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -1,93 +1,64 @@
-name: Build, Push and Deploy Frontend Docker Image on GKE
+name: Update Frontend Docker image on GKE
 
 on:
   push:
     branches:
       - main
-      - develop
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    environment: ${{ github.ref }}
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name : env create
+        run: echo "${{secrets.ENV}}" >> .env
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v2'
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}  
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'  
-          install_components: 'gke-gcloud-auth-plugin'
-
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-          sudo apt-get install -y apt-transport-https ca-certificates gnupg
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | \
-            sudo tee /etc/apt/sources.list.d/google-cloud-sdk.list
-          curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | \
-            sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-          sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-
-      - name: Build Docker Image
-        run: |
-          gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/front/front:${GITHUB_SHA} .
-          docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/front/front:${GITHUB_SHA}
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Docker Image to Docker Hub
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:${GITHUB_SHA} .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:${GITHUB_SHA}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
 
   deploy-to-gke:
-    needs: build-and-push  # Só roda após o build and push
+    needs: build-and-push 
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Google Cloud credentials
-        uses: google-github-actions/auth@v2
+        uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
       - name: Authenticate with Google Cloud Service Account
         run: |
           gcloud auth activate-service-account --key-file="${{ secrets.GCP_SA_KEY }}"
-          gcloud auth list 
-          gcloud config list  
+          gcloud auth list  # Verifica se a conta de serviço foi autenticada corretamente
+          gcloud config list  # Verifica a configuração atual do gcloud
 
       - name: Set up kubectl for cluster-dev
         run: |
           gcloud container clusters get-credentials cluster-dev --zone us-central1 --project ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Deploy to Kubernetes (for main branch)
-        if: github.ref == 'refs/heads/main'
+      - name: Update Kubernetes deployment with new image
         run: |
-          kubectl config use-context gke_${{ secrets.GCP_PROJECT_ID }}_us-central1_cluster-dev
-          kubectl set image deployment/blog-frontend frontend=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/front/front:${GITHUB_SHA} --record -n frontend
-
-      - name: Deploy to Kubernetes (for develop branch)
-        if: github.ref == 'refs/heads/develop'
-        run: |
-          gcloud container clusters get-credentials cluster-dev --zone us-central1 --project ${{ secrets.GCP_PROJECT_ID }}
-          kubectl config use-context gke_${{ secrets.GCP_PROJECT_ID }}_us-central1_cluster-dev
-          kubectl set image deployment/blog-frontend frontend=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/front/front:${GITHUB_SHA} --record -n frontend
+          kubectl set image deployment/blog-frontend frontend=${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest --record -n frontend
 
       - name: Verify the update status
         run: |
