--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -1,5 +1,3 @@
-name: Update Frontend Docker image on GKE
-
 on:
   push:
     branches:
@@ -66,7 +64,7 @@ jobs:
         with:
           cluster_name: ${{ env.GKE_CLUSTER }}
           location: ${{ env.GKE_ZONE }}
-          credentials: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}  # Passando o project_id corretamente
 
       # Build da imagem Docker
       - name: Build Docker image
