--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -2,20 +2,20 @@ on:
   push:
     branches:
       - main
-     
+      - develop
+
 env:
   PROJECT_ID: ${{ secrets.GCLOUD_PROJECT }}
   GKE_CLUSTER: your-cluster-name
   GKE_ZONE: us-central1
-  DEPLOYMENT_NAME: front
+  DEPLOYMENT_NAME: blog-frontend
   IMAGE: front
 
 jobs:
   build_and_deploy:
-    needs: test
     runs-on: ubuntu-latest
     environment: ${{ github.ref }}
-
+    
     steps:
       # Checkout do código
       - name: Checkout Code
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      # Autenticação com Google Cloud e GKE
+      # Autenticação com Google Cloud (método igual ao outro exemplo)
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
@@ -33,7 +33,7 @@ jobs:
           credentials_json: '${{ secrets.GKE_SECRET }}'
           install_components: 'gke-gcloud-auth-plugin'
 
-      # Instalação do gke-gcloud-auth-plugin (necessário para autenticação com GKE)
+      # Instalação do gke-gcloud-auth-plugin (necessário para a autenticação com GKE)
       - name: Install gke-gcloud-auth-plugin
         run: |
           sudo apt-get install -y apt-transport-https ca-certificates gnupg
@@ -44,28 +44,24 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
-      # Configuração do Docker para usar o gcloud como helper de autenticação
+      # Construção e push da imagem Docker
       - name: Build Docker Image
         run: |
           gcloud auth configure-docker us-central1-docker.pkg.dev
           docker build -t us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA} .
           docker push us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA}
 
-      # Deploy para o GKE
+      # Deploy no Kubernetes (GKE)
       - name: Deploy to Kubernetes
         run: |
           if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
-            # Configuração de credenciais para o cluster de produção
             gcloud container clusters get-credentials production --zone us-central1 --project ${{ secrets.GCLOUD_PROJECT }}
             
-            # Configuração do contexto para o cluster de produção
             kubectl config use-context gke_${{ secrets.GCLOUD_PROJECT }}_us-central1_production
-            kubectl set image deployment/front front=us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA}
+            kubectl set image deployment/blog-frontend blog-frontend=us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA}
           elif [[ "${GITHUB_REF}" == "refs/heads/develop" ]]; then
-            # Configuração de credenciais para o cluster de desenvolvimento
             gcloud container clusters get-credentials stage --zone us-central1 --project ${{ secrets.GCLOUD_PROJECT }}
             
-            # Configuração do contexto para o cluster de desenvolvimento
             kubectl config use-context gke_${{ secrets.GCLOUD_PROJECT }}_us-central1_stage
-            kubectl set image deployment/front front=us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA}
+            kubectl set image deployment/blog-frontend blog-frontend=us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA}
           fi
