--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -1,67 +1,66 @@
+name: Build and Push Frontend Docker image
+
 on:
   push:
     branches:
-      - main
-      - develop
-
-env:
-  PROJECT_ID: ${{ secrets.GCLOUD_PROJECT }}
-  GKE_CLUSTER: your-cluster-name
-  GKE_ZONE: us-central1
-  DEPLOYMENT_NAME: blog-frontend
-  IMAGE: front
+      - release
 
 jobs:
-  build_and_deploy:
-    runs-on: ubuntu-latest
-    environment: ${{ github.ref }}
-    
+  test:
+    runs-on: ubuntu-22.04
+
     steps:
-      # Checkout do código
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # Configuração do Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      # Autenticação com Google Cloud (método igual ao outro exemplo)
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v2'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          project_id: ${{ secrets.GCLOUD_PROJECT }}
-          credentials_json: '${{ secrets.GKE_SECRET }}'
-          install_components: 'gke-gcloud-auth-plugin'
+          node-version: '18'
+          cache: 'npm'
 
-      # Instalação do gke-gcloud-auth-plugin (necessário para a autenticação com GKE)
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-          sudo apt-get install -y apt-transport-https ca-certificates gnupg
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | \
-            sudo tee /etc/apt/sources.list.d/google-cloud-sdk.list
-          curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | \
-            sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-          sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+      - name: Cache Node.js modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: node-cache-${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            node-cache-${{ runner.os }}-npm-
 
-      # Construção e push da imagem Docker
-      - name: Build Docker Image
-        run: |
-          gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA} .
-          docker push us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA}
+      - name: Install dependencies
+        run: npm ci
 
-      # Deploy no Kubernetes (GKE)
-      - name: Deploy to Kubernetes
-        run: |
-          if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
-            gcloud container clusters get-credentials production --zone us-central1 --project ${{ secrets.GCLOUD_PROJECT }}
-            
-            kubectl config use-context gke_${{ secrets.GCLOUD_PROJECT }}_us-central1_production
-            kubectl set image deployment/blog-frontend blog-frontend=us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA}
-          elif [[ "${GITHUB_REF}" == "refs/heads/develop" ]]; then
-            gcloud container clusters get-credentials stage --zone us-central1 --project ${{ secrets.GCLOUD_PROJECT }}
-            
-            kubectl config use-context gke_${{ secrets.GCLOUD_PROJECT }}_us-central1_stage
-            kubectl set image deployment/blog-frontend blog-frontend=us-central1-docker.pkg.dev/${{ secrets.GCLOUD_PROJECT }}/front/front:${GITHUB_SHA}
-          fi
+      - name: Run frontend tests
+        run: npm test
+
+  build-and-push:
+    needs: test  # Só roda se os testes passarem
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+
+      - name : env create
+        run: echo "${{secrets.ENV}}" >> .env
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+
+        
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
+          
+    
