--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -6,42 +6,14 @@ on:
       - release
 
 jobs:
-  test:
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Cache Node.js modules
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: node-cache-${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            node-cache-${{ runner.os }}-npm-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run frontend tests
-        run: npm test
-
   build-and-push:
-    needs: test  # Só roda se os testes passarem
+
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         
-
       - name : env create
         run: echo "${{secrets.ENV}}" >> .env
         
@@ -50,8 +22,6 @@ jobs:
       
       - name: Login to Docker Hub
         uses: docker/login-action@v3
-
-        
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -62,5 +32,27 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
-          
+
+  deploy:
+    needs: build-and-push  
+    runs-on: ubuntu-latest
+    environment: ${{ github.ref }}
     
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - id: 'auth'
+        uses: google-github-actions/auth@v2
+        with:
+          project_id: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_PROJECT_ID }}
+          install_components: 'gke-gcloud-auth-plugin'
+          
+      - name: Configure kubectl
+        run: gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Deploy to GKE
+        run: |
+          kubectl set image deployment/frontend-deployment frontend=${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
+          kubectl rollout status deployment/frontend-deployment
