--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -34,25 +34,30 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
 
   deploy:
-    needs: build-and-push  
+    needs: build-and-push
     runs-on: ubuntu-latest
     environment: ${{ github.ref }}
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+  
       - id: 'auth'
         uses: google-github-actions/auth@v2
         with:
-          project_id: ${{ secrets.GCP_SA_KEY }}
-          credentials_json: ${{ secrets.GCP_PROJECT_ID }}
-          install_components: 'gke-gcloud-auth-plugin'
-          
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }} 
+  
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          gcloud components install gke-gcloud-auth-plugin -q
+  
       - name: Configure kubectl
-        run: gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
-
+        run: |
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
+  
       - name: Deploy to GKE
         run: |
           kubectl set image deployment/frontend-deployment frontend=${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
-          kubectl rollout status deployment/frontend-deployment 
+          kubectl rollout status deployment/frontend-deployment
+
