--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -34,44 +34,37 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
 
   deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    environment: ${{ github.ref }}
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  needs: build-and-push
+  runs-on: ubuntu-latest
+  environment: ${{ github.ref }}
   
-      - id: 'auth'
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}  # Chave JSON da conta de serviço
-          project_id: ${{ secrets.GCP_PROJECT_ID }}  # ID do projeto
-  
-      - name: Install Google Cloud SDK and GKE Plugin
-        run: |
-          # Baixando e instalando o Google Cloud SDK
-          curl https://sdk.cloud.google.com | bash
-          source $HOME/google-cloud-sdk/path.bash.inc
-  
-          # Instalando o plugin gke-gcloud-auth-plugin
-          gcloud components install gke-gcloud-auth-plugin
-  
-      - name: Verify gke-gcloud-auth-plugin installation
-        run: |
-          gcloud components list | grep gke-gcloud-auth-plugin
-  
-      - name: Configure kubectl to use cluster-dev
-        run: |
-          # Usando a região armazenada em GKE_REGION para configurar o kubectl
-          gcloud container clusters get-credentials cluster-dev --region ${{ secrets.GKE_REGION }} --project ${{ secrets.GCP_PROJECT_ID }}
-          # Verificando a conexão com o cluster
-          kubectl cluster-info
-  
-      - name: Deploy to GKE (update blog-frontend image)
-        run: |
-          kubectl set image deployment/blog-frontend frontend=${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
-          kubectl rollout status deployment/blog-frontend
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
+    - id: 'auth'
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+    - name: Set up Cloud SDK and kubectl
+      uses: google-github-actions/setup-gcloud@v2
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        install_components: 'gke-gcloud-auth-plugin kubectl'
+        export_default_credentials: true
+
+    - name: Configure kubectl to use cluster-dev
+      run: |
+        gcloud container clusters get-credentials cluster-dev \
+          --region ${{ secrets.GKE_REGION }} \
+          --project ${{ secrets.GCP_PROJECT_ID }}
+        kubectl cluster-info
+
+    - name: Deploy to GKE (update blog-frontend image)
+      run: |
+        kubectl set image deployment/blog-frontend frontend=${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
+        kubectl rollout status deployment/blog-frontend
 
 
