--- a/.github/workflows/pipeline-dev.yml
+++ b/.github/workflows/pipeline-dev.yml
@@ -43,7 +43,7 @@ jobs:
         
 
       - name : env create
-        run: echo "${{secrets.ENV}}" >> .env
+        run: echo "${{secrets.ENV_PROD}}" >> .env
         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
