--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -33,44 +33,43 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
 
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    environment: ${{ github.ref }}
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+ deploy:
+  needs: build-and-push
+  runs-on: ubuntu-latest
+  environment: ${{ github.ref }}
   
-      - id: 'auth'
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-  
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-  
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-          # Baixa a versão mais recente do plugin diretamente do Google Cloud Storage
-          PLUGIN_URL="https://storage.googleapis.com/cloud-sdk-release/google-cloud-cli-$(gcloud --version | grep 'Google Cloud SDK' | awk '{print $4}')-linux-x86_64.tar.gz"
-          curl -O $PLUGIN_URL
-          tar -xzf google-cloud-cli-*-linux-x86_64.tar.gz
-          sudo cp google-cloud-sdk/bin/gke-gcloud-auth-plugin /usr/local/bin/
-          sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
-          echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
-  
-      - name: Configure kubectl to use cluster-dev
-        run: |
-          gcloud container clusters get-credentials cluster-dev \
-            --region ${{ secrets.GKE_REGION }} \
-            --project ${{ secrets.GCP_PROJECT_ID }}
-          kubectl cluster-info
-  
-      - name: Deploy to GKE (update blog-frontend image)
-        run: |
-          kubectl set image deployment/blog-frontend frontend=${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
-          kubectl rollout status deployment/blog-frontend
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - id: 'auth'
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+    - name: Set up Cloud SDK and kubectl
+      uses: google-github-actions/setup-gcloud@v2
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        install_components: 'kubectl'
+
+    - name: Install gke-gcloud-auth-plugin
+      run: |
+        # Baixa a versão estável mais recente do plugin
+        sudo curl -Lo /usr/local/bin/gke-gcloud-auth-plugin \
+          https://storage.googleapis.com/gke-release/gke-gcloud-auth-plugin/linux/amd64/gke-gcloud-auth-plugin
+        sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
+        echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
+
+    - name: Configure kubectl to use cluster-dev
+      run: |
+        gcloud container clusters get-credentials cluster-dev \
+          --region ${{ secrets.GKE_REGION }} \
+          --project ${{ secrets.GCP_PROJECT_ID }}
+        kubectl cluster-info
+
+    - name: Deploy to GKE (update blog-frontend image)
+      run: |
+        kubectl set image deployment/blog-frontend frontend=${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:latest
+        kubectl rollout status deployment/blog-frontend
